--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,20 @@
 .header img {
   height:60px;
 }
+.header{
+    text-align:center;
+}
+.header nav{
+    background: black;
+    line-height: 40px;
+    font-size: 20px;
+}
+nav a{
+    text-decoration: none;
+    color:white;
+    margin-right: 20px;
+    padding:5px
+}
+nav a:hover{
+    color: rgb(202, 202, 202);
+}
